--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 server:
   port: 8082
 spring:
+  servlet:
+    multipart:
+      max-file-size: 20MB
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
   datasource:
     url: jdbc:postgresql://${DB_ADDRESS}:5432/${DB_NAME}
     username: ${DB_USERNAME}
